--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
-    "react-scroll": "^1.8.9",
-    "web3modal": "^1.9.12"
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -36,12 +35,15 @@
     "@typechain/hardhat": "^6.1.2",
     "autoprefixer": "^10.4.14",
     "chai": "^4.2.0",
-    "ethers": "^5.4.7",
+    "ethers": "5.6.1",
     "hardhat": "^2.13.0",
     "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.21",
     "solidity-coverage": "^0.8.0",
     "tailwindcss": "^3.2.7",
     "typechain": "^8.1.0"
+  },
+  "resolutions": {
+    "**/ethers": "5.6.1"
   }
 }
