--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-notion": "^0.10.0",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
