--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@openzeppelin/contracts": "^4.8.2",
     "@polybase/auth": "^0.3.37",
     "@polybase/client": "^0.3.37",
+    "@react-google-maps/api": "^2.7.0",
     "alchemy-sdk": "^2.6.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "framer-motion": "^10.12.4",
     "ipfs-http-client": "^60.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-notion": "^0.10.0",
-    "react-scroll": "^1.8.9",
-    "@react-google-maps/api": "^2.7.0"
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
