--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "alchemy-sdk": "^2.6.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "firebase": "^9.21.0",
     "framer-motion": "^10.12.4",
     "ipfs-http-client": "^60.0.0",
     "next": "13.2.4",
@@ -25,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-notion": "^0.10.0",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "react-uploader": "^3.23.0"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
